# DealSphere

./: .dockerignore  .env.example  .replit  API_DOCUMENTATION.md  AWS-DEPLOYMENT-GUIDE.md  DB_SCHEMA.sql  DEPLOYMENT.md  Dockerfile  Dockerfile.frontend  Dockerfile.python-only  README-DEPLOYMENT.md  README.md  apprunner.yaml  aws-deploy.md  dashboard_response.html  db_create_app_user.sql  debug_deals.js  deploy.sh  docker-compose.yml  package-frontend-only.json  package-lock.json  package.json  pyproject.toml  replit.md  run_python.py  start.py  start_app.py  start_python.py  task-definition.json
attached_assets/: Pasted-Privacy-Policy-Last-Updated-Insert-Date-Your-Website-Name-we-our-us-respects-your-pr-1755056852015_1755056852017.txt  Pasted-Terms-and-Conditions-Last-Updated-Insert-Date-Welcome-to-Your-Website-Name-we-us-or-ou-1755057029492_1755057029493.txt  Pasted-You-are-a-senior-full-stack-developer-and-Amazon-Associ_1770701901459.txt  Pasted-You-are-a-senior-full-stack-developer-and-technical-SEO_1770699852453.txt  Pasted-You-are-a-senior-full-stack-developer-technical-SEO-exp_1770701851204.txt  content-1770779279955.md  index-DEMdJGvf_1759047494096.css  index-xza6Z_DF_1759047494096.js
client/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
python_backend/: __init__.py  admin_auth.py  app.py  app_reactpy.py  auth.py  database.py  main.py  models.py  reactpy_server.py  requirements.txt  seed_data.py  seo_helper.py  simple_debug_server.py  simple_server.py  working_server.py
server/: index.ts  routes.ts  seedData.ts  storage.ts
(+68 files in other folders)
